--- a/app.css
+++ b/app.css
@@ -2,9 +2,13 @@ table {
   border-collapse: collapse;
   text-align: center;
 }
+
 td, th {
   border: 1px solid #000;
+  height: 80px;
+  width: 80px;
 }
+
 thead {
   color: #fff;
   background-color: #000
