--- a/assets/style.css
+++ b/assets/style.css
@@ -12,6 +12,7 @@ td, th {
   border: 1px solid #000;
   height: 80px;
   width: 80px;
+  position: relative;
 }
 
 td#freespace {
@@ -22,6 +23,24 @@ thead {
   color: #fff;
   background-color: #000;
   font-size: 2em;
+}
+
+td.checked::after {
+  content: ' ';
+  background-color: blue;
+  color: blue;
+  height: 75px;
+  width: 75px;
+  border-radius: 45px;
+  display: block;
+  position: absolute;
+  opacity: .25;
+  top: 2;
+  right: 2;
+}
+
+td.not(.checked)::after {
+  display: none;
 }
 
 p.controls {
